feat: 쿠폰 사용 및 보상 트랜잭션 로직 개선
- `Order` 모델에 `usedCouponId` 필드 추가 및 관련 생성자 업데이트
- `releaseByOrderId` 제거, `releaseSpecificCoupon`으로 대체 지원
- `CompensationService`가 주문 데이터 사용하여 보상 로직 처리
- 적절한 파라미터 형태로 `CouponService` 호출 변경 (`orderId` → `couponId`, `userId`)
- 모든 관련 서비스 및 테스트 코드 업데이트 (`OrderService`, `OrderFacadeTest`, 등)
- 기존 로직을 보완하여 더 안전하고 명료한 쿠폰 해제 및 재고 복원 처리 구현