@@ -3,9 +3,12 @@ package com.loopers.application.order;
 import com.loopers.domain.discount.CouponService;
 import com.loopers.domain.order.OrderService;
 import com.loopers.domain.order.model.Order;
+import com.loopers.domain.order.model.OrderAmount;
 import com.loopers.domain.order.model.OrderItem;
+import com.loopers.domain.order.model.OrderStatus;
 import com.loopers.domain.product.ProductService;
 import com.loopers.domain.product.model.Price;
+import com.loopers.domain.user.model.UserId;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,23 +17,18 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@DisplayName("CompensationService 테스트")
 class CompensationServiceTest {
 
-    @Mock
-    private ProductService productService;
-    
-    @Mock
-    private CouponService couponService;
-
-    @Mock
-    private OrderService orderService;
+    @Mock private ProductService productService;
+    @Mock private CouponService couponService;
+    @Mock private OrderService orderService;
 
     @InjectMocks
     private CompensationService compensationService;
@@ -42,49 +40,56 @@ class CompensationServiceTest {
         Long orderId = 123L;
         Long productId1 = 1L;
         Long productId2 = 2L;
-        
-        List<OrderItem> orderItems = Arrays.asList(
-            new OrderItem(productId1, 2, Price.of(BigDecimal.valueOf(10000))),
-            new OrderItem(productId2, 1, Price.of(BigDecimal.valueOf(20000)))
+
+        UserId userId = UserId.of("testUser");
+        Long couponId = 1L;
+
+        var items = List.of(
+            new OrderItem(productId1, 2, Price.of(new BigDecimal("10000"))),
+            new OrderItem(productId2, 1, Price.of(new BigDecimal("20000")))
         );
-        
-        Order mockOrder = mock(Order.class);
-        when(mockOrder.getItems()).thenReturn(orderItems);
-        when(orderService.getOrder(orderId)).thenReturn(mockOrder);
+
+        Order orderParam = Order.reconstruct(
+            orderId, userId, items, OrderStatus.PENDING, OrderAmount.of(new BigDecimal("30000")), couponId
+        );
+
+        Order orderFromDb = mock(Order.class);
+        when(orderFromDb.getItems()).thenReturn(items);
+        when(orderService.getOrder(orderId)).thenReturn(orderFromDb);
 
         // when
-        compensationService.reverseFor(orderId);
+        compensationService.reverseFor(orderParam);
 
         // then
-        // 1. 주문 조회 확인
         verify(orderService).getOrder(orderId);
-        
-        // 2. 각 상품별 재고 복원 확인
         verify(productService).restoreStock(eq(productId1), eq(2));
         verify(productService).restoreStock(eq(productId2), eq(1));
-        
-        // 3. 쿠폰 해제 확인
-        verify(couponService).releaseByOrderId(orderId);
+        verify(couponService).releaseSpecificCoupon(couponId, userId.value());
     }
-
 
     @Test
     @DisplayName("주문 아이템이 없는 경우에도 쿠폰 해제는 시도한다")
     void shouldAttemptCouponReleaseEvenWithEmptyOrderItems() {
         // given
         Long orderId = 789L;
-        
-        Order mockOrder = mock(Order.class);
-        when(mockOrder.getItems()).thenReturn(Arrays.asList());
-        when(orderService.getOrder(orderId)).thenReturn(mockOrder);
+        UserId userId = UserId.of("testUser");
+        Long couponId = 1L;
+
+        var dummyItems = List.of(new OrderItem(1L, 1, Price.of(new BigDecimal("1000")))); // 파라미터용
+        Order orderParam = Order.reconstruct(
+            orderId, userId, dummyItems, OrderStatus.PENDING, OrderAmount.of(new BigDecimal("1000")), couponId
+        );
+
+        Order orderFromDb = mock(Order.class);
+        when(orderFromDb.getItems()).thenReturn(List.of()); // 빈 아이템
+        when(orderService.getOrder(orderId)).thenReturn(orderFromDb);
 
         // when
-        compensationService.reverseFor(orderId);
+        compensationService.reverseFor(orderParam);
 
         // then
         verify(orderService).getOrder(orderId);
-        verify(couponService).releaseByOrderId(orderId);
-        // 재고 복원은 호출되지 않아야 함
-        verifyNoInteractions(productService);
+        verifyNoInteractions(productService); // 재고 복원 없음
+        verify(couponService).releaseSpecificCoupon(couponId, userId.value());
     }
 }
